# bit-counter

./: Cargo.toml  LICENSE.md  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
src/: lib.rs
