[package]
name = "bit-counter"
version = "0.3.0"
edition = "2021"
description = "Package for efficiently counting the number of one bits in a numpy array."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bit_counter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
numpy = { version = "0.24"}
rayon = { version = "1.7" }
num-traits = "0.2.19"
