[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[project]
name = "bit-counter"
readme = "README.md"
dynamic = ["version", "summary", "description", "description_content_type"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

